fixed : table alignment to center , font size adjust

--- a/wwwroot/css/history.css
+++ b/wwwroot/css/history.css
@@ -6,7 +6,7 @@
 /* main */
 .main{
     background-color: #176B87 ;
-    height: auto;
+    height: 100vh;
     margin: 5px;
     padding: 5px;
 }
@@ -34,7 +34,7 @@ nav{
 }
 .menu li{
     color :black;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 450;
     padding: 10px;
     margin :5px;
@@ -144,12 +144,13 @@ form button:hover{
 .table-row{
     width: 80%;
     display: flex;
+    justify-content: space-between;
     margin: 10px auto;
     font-family: sans-serif;
     background: transparent;
     padding: 12px 0;
     color: black;
-    font-size: 13px;
+    font-size: 1.1rem;
     box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
 }
 .table-head{
@@ -157,7 +158,7 @@ form button:hover{
     box-shadow: none;
     color : white;
     font-weight: 300;
-    font-size: 15px;
+    font-size: 2.5vw;
 }
 .table-body{
     display:flex;
@@ -170,7 +171,7 @@ form button:hover{
     /* display: flex; */
     padding: 4px 0;
     vertical-align: middle;
-    text-align: left;
+    text-align: center;
     border-right: none;
     width: fit-content;
     margin: auto;
@@ -192,11 +193,10 @@ form button:hover{
     margin:0;
 }
 .first-cell{
-    text-align: left;
-    padding-left: 10px;
+    text-align: center;
 }
 .last-cell{
-    border-right: none;
+    
 }
 nav a{
     text-decoration: none;
@@ -300,6 +300,7 @@ nav a{
     form button{
         margin-left : 20px;
         width: 84%;
+        margin-top: 5px;
         padding-left: 8px;
     }
     .dropdown{
@@ -347,7 +348,7 @@ nav a{
         border-right: none;
     }
     .table-row.table-body{
-        font-size: 10px;
+        font-size: 15px;
         width: 100%;
         height: 15%;
         overflow-x: scroll;
@@ -359,7 +360,7 @@ nav a{
     }
     .main{
         background-color: white ;
-        height: 100vm;
+        height: 100vh;
     }
     nav{
         width: 100%
